--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="glass-buttons">
             <a href="https://dexscreener.com" class="glass-button" target="_blank">Dex</a>
             <a href="https://pump.fun" class="glass-button" target="_blank">Pump</a>
-            <a href="https://x.com" class="glass-button" target="_blank">X.com</a>
+            <a href="https://x.com/NOAintrovertAI" class="glass-button" target="_blank">X.com</a>
         </div>        
     </div>
 
